# TemporalPattern

dal/: AUTHORS  ChangeLog  ChangeLog~  Makefile  Makefile.am  Makefile.in  README  acconfig.h  config.h  config.h.in  config.status  configure  configure.in  configure.in~  configure_debug  configure_plain  libtool
dal/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
dal/data/: Makefile  Makefile.Tutorial  Makefile.am  Makefile.in  a.tab  b.tab  butterfly.ddl  dtp.tab  empty.ddl  figure-2-1.ddl  figure-2-5.ddl  figure-2-6.ddl  htest.tab  iris.ddl  iris.ddl~  iris.tab  myargs.ddl  noargs.ddl  test.tab  test2.tab
dal/doc/: Makefile  Makefile.am  Makefile.in  access.hdr  refman.cfg  refman.tex  refman.tex~  stc.tex  tutor.cfg  tutor.cfg~  tutor.tex  tutor.tex.flc  tutor.tex~
dal/src/: #dal.hpp#  #datarep.cpp#  .kdbgrc.a.out  Box.cpp  Box.hpp  Makefile  Makefile.am  Makefile.am~  Makefile.in  Statistics.cpp  Statistics.hpp  access.cpp  access.cpp~  access.hpp  access.hpp~  algorithm.cpp  algorithm.cpp~  algorithm.hpp  algorithm.hpp~  cmat.cpp  cmat.cpp~  context.cpp  context.cpp~  copy.cpp  copy.cpp~  dal.hpp  dal.hpp~  dal.id  datarep.cpp  datarep.cpp~  datatype.cpp  datatype.cpp~  distance.cpp  distance.cpp~  distance.hpp~  domain.cpp  domain.cpp~  filter.cpp  filter.cpp~  freq.cpp  (+54 more)
utility/: AUTHORS  ChangeLog  ChangeLog~  Makefile  Makefile.in  NEWS  README  THANKS  acconfig.h  acconfig.h~  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  configure.in~  configure_debug  configure_plain  libtool  reconf
(+366 files in other folders)
